# henriquesebastiao.com

./: .dockerignore  .gitignore  Dockerfile  Gemfile  Makefile  README.md  _config.yml  docker-compose.yml  justfile  links.txt  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  check-bronken-links-images.yml  check-bronken-links.yml  deploy.yml  test.yml
_data/: authors.yml  contact.yml  links.yml  projects.yml  share.yml
_includes/: head.html  lang-selector.html  search-loader.html  sidebar.html  topbar.html
_layouts/: default.html  home.html  notitle.html  page.html  post.html  projects.html
_posts/: 2024-01-18-como-gosto-de-organizar-um-projeto-python.md  2024-05-14-como-proteger-um-roteador-mikrotik-e-qualquer-outro.md  2025-03-19-sobre-mim.md
_posts/en/: 2024-01-02-hello-world.md  2024-05-14-como-proteger-um-roteador-mikrotik-e-qualquer-outro.md  2025-03-19-sobre-mim.md  2026-01-18-como-usar-um-hd-externo-criptografado-em-um-servidor-linux.md  2026-01-28-como-instalar-uma-antena-externa-no-cardputer.md
_posts/pt-BR/: 2024-01-18-como-gosto-de-organizar-um-projeto-python.md  2024-05-14-como-proteger-um-roteador-mikrotik-e-qualquer-outro.md  2025-03-19-sobre-mim.md  2026-01-18-como-usar-um-hd-externo-criptografado-em-um-servidor-linux.md  2026-01-25-desenvolvimento-de-um-sistema-de-comunicacao-com-criptografia-de-ponta-a-ponta.md  2026-01-28-como-instalar-uma-antena-externa-no-cardputer.md
_tabs/: about.md  portifolio.md  projects.md
_tabs/en/: about.md  categories.md  portfolio.md  portifolio.md  projects.md
_tabs/pt-BR/: about.md  categories.md  portfolio.md  portifolio.md  projects.md
assets/: 404.html
assets/css/: jekyll-theme-chirpy.scss  lang-selector.css  (+3 more)
links/: images.txt  links.txt
pages/: 404.md  cv.html  links.html
redirects/: github.md  instagram.md  linkedin.md  mastodon.md
scripts/: check_broken_links.py  compress_image.py
(+20 files in other folders)
