[project]
name = "henriquesebastiao"
version = "0.1.0"
description = "Site pessoal e Portifólio"
authors = [
    {name = "Henrique Sebastião",email = "contato@henriquesebastiao.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
